<resources>
    <string name="app_name">TimerStatePrototype</string>
    <string name="timer_value">00:00</string>
    <string name="strSession">0</string>
    <string name="strState">Pulsa para iniciar un ciclo</string>
    <string name="descansando">DESCANSANDO</string>
    <string name="trabajando">TRABAJANDO</string>
    <string name="durmiendo">DURMIENDO</string>
    <string name="nuevociclo">NUEVO CICLO</string>
    <string name="strAjustes">Ajustes</string>
    <string name="strLogin">Login</string>
    <string name="strEtiquetas">Etiquetas</string>
    <string name="strEstadistica">Estadísticas</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="strPassword">Password</string>
    <string name="strSingUp">Registrarse</string>
    <string name="email">Email</string>
    <string name="strAccountOn">¿TIENE YA UNA CUENTA?</string>
    <string name="strAccountOFF">¿NO TIENE CUENTA AÚN?</string>
    <string name="strAllFields">Debe rellenar todos los campos</string>
    <string name="submit">Aceptar</string>
    <string name="strTimeCategory">Duración de los pomodoros</string>
    <string name="strWorkTime">Duración de la sesíón de trabajo</string>
    <string name="strBreakTime">Duración del descanso</string>
    <string name="strSleepTime">Duración del descanso largo</string>
    <string name="strRestartSessions">Para reiniciar el contador primero pause la sesión</string>
    <string name="strTagTitle">"Nombre: "</string>
    <string name="strTagColor">"Color: "</string>
    <string name="strDialogTag">Etiqueta Personalizada</string>
    <string name="rosa">Rosa</string>
    <string name="rojo">Rojo</string>
    <string name="naranja">Naranja</string>
    <string name="amarillo">Amarillo</string>
    <string name="verde_pistacho">Verde Pistacho</string>
    <string name="verde">Verde</string>
    <string name="turquesa">Turquesa</string>
    <string name="cyan">Cian</string>
    <string name="azur">Azur</string>
    <string name="azul">Azul</string>
    <string name="violeta">Violeta</string>
    <string name="magenta">Magenta</string>
    <string name="strTagListError">Error al cargar la lista de etiquetas</string>
    <string name="strSuccesfulRegister">Registro Exitoso</string>
    <string name="strSuccesfulLogin">Login Exitoso</string>
    <string name="strTagCreateT">Etiqueta Creada Exitosamente</string>
    <string name="strTagCreateF">No se pudo crear la Etiqueta</string>
    <string name="strLoginFail">Credenciales Inválidas</string>
    <string name="strDeleteTagF">Error al Eliminar</string>
    <string name="strDeleteTagT">Etiqueta Eliminada</string>
    <string name="strStatNotLogged">Debe iniciar sesión para usar esta funcionalidad</string>
    <string name="strEnterTagName">Introduzca el nombre de una etiqueta</string>
    <string name="strDarkMode">Modo oscuro</string>
    <string name="strActiveVibration">Vibración activa</string>
    <string name="strScreen">Pantalla siempre activa</string>
</resources>