<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/strTimeCategory">

        <SeekBarPreference
            android:id="@+id/sbWork"
            android:defaultValue="@integer/work_bar_default"
            android:key="work_bar_key"
            android:max="@integer/work_bar_max"
            android:min="@integer/work_bar_min"
            android:stepSize="1"
            android:summary="@string/strWorkTime"
            app:trackColorActive="@color/kairos_red"
            app:trackColorInactive="@color/white" />

        <SeekBarPreference
            android:id="@+id/sbBreak"
            android:defaultValue="@integer/break_bar_default"
            android:key="break_bar_key"
            android:max="@integer/break_bar_max"
            android:min="@integer/break_bar_min"
            android:stepSize="1"
            android:summary="@string/strBreakTime"
            app:trackColorActive="@color/kairos_red"
            app:trackColorInactive="@color/white" />

        <SeekBarPreference
            android:id="@+id/sbSleep"
            android:defaultValue="@integer/sleep_bar_default"
            android:key="sleep_bar_key"
            android:max="@integer/sleep_bar_max"
            android:min="@integer/sleep_bar_min"
            android:stepSize="1"
            android:summary="@string/strSleepTime"
            app:trackColorActive="@color/kairos_red"
            app:trackColorInactive="@color/white" />


    </PreferenceCategory>
    <PreferenceCategory android:title="Tema">

        <CheckBoxPreference
            android:id="@+id/cbDark"
            android:defaultValue="true"
            android:key="dark_mode_key"
            android:title="@string/strDarkMode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Preferencias generales">

        <CheckBoxPreference
            android:id="@+id/cbVibrate"
            android:defaultValue="true"
            android:key="vibrate_key"
            android:title="@string/strActiveVibration" />
        <CheckBoxPreference
            android:id="@+id/cbScreen"
            android:defaultValue="false"
            android:key="onScreen_key"
            android:title="@string/strScreen" />
    </PreferenceCategory>


</PreferenceScreen>