<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="?attr/bgColor"
    tools:context=".activities.LoginActivity">

  <ImageView
      android:id="@+id/imBack"
      android:layout_width="42dp"
      android:layout_height="42dp"
      android:tint="?attr/imColor"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.043"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.021"
      app:srcCompat="@drawable/ic_back" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toTopOf="@+id/tvLogin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/kairos_nm" />

  <TextView
      android:id="@+id/tvLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/simplifica"
      android:text="@string/strSingUp"
      android:textColor="?attr/tColor"
      android:textSize="55sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/tilUsername"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.777" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilUsername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:boxStrokeColor="#FF5252"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.354">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etUsernameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_user"
        android:fontFamily="@font/simplifica"
        android:hint="@string/username"
        android:shadowColor="?attr/tColor"
        android:textColor="?attr/tColor"
        android:textSize="24sp"
        android:textStyle="bold" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilMail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.842"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tilUsername"
      app:layout_constraintVertical_bias="0.075">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etMailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_email"
        android:fontFamily="@font/simplifica"
        android:hint="@string/email"
        android:textColor="?attr/tColor"
        android:textSize="24sp"
        android:textStyle="bold" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilPass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.526"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tilUsername"
      app:layout_constraintVertical_bias="0.359">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_password"
        android:fontFamily="@font/simplifica"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="?attr/tColor"
        android:textSize="24sp"
        android:textStyle="bold" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/registerButton"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp"
      android:backgroundTint="#FF5252"
      android:fontFamily="@font/simplifica"
      android:text="@string/submit"
      android:textAlignment="center"
      android:textColor="#FFFFFF"
      android:textColorHint="#FF5252"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tilPass"
      app:layout_constraintVertical_bias="0.149"
      app:strokeColor="?attr/tColor" />

  <TextView
      android:id="@+id/tvToLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/simplifica"
      android:text="@string/strAccountOn"
      android:textColor="?attr/tColor"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.518"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registerButton"
      app:layout_constraintVertical_bias="0.268" />

</androidx.constraintlayout.widget.ConstraintLayout>